--- a/_config.yaml
+++ b/_config.yaml
@@ -2,15 +2,15 @@
 title: Cognition and Action Lab
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
-header: images/background.jpg
-footer: images/background.jpg
+header: images/cognac_website_photo.jpg
+footer: images/cognac_website_photo.jpg
 proofer: false
 
 # site social media and other links
 links:
   email: contact@Ivry-Lab.com
   orcid: 0000-0001-8713-9213
-  google-scholar: ETJoidYAAAAJ
+  google-scholar: https://scholar.google.com/citations?user=nicnuy4AAAAJ&hl=en
   github: https://github.com/Ivry-Lab
   twitter: Ivry-Lab
   youtube: Ivry-Lab
