--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: Cognition and Action Lab
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
-header: images/cognac_website_photo.jpg
-footer: images/cognac_website_photo.jpg
+header: images/cognac_website_photo.png
+footer: images/cognac_website_photo.png
 proofer: false
 
 # site social media and other links
