Fix video format

--- a/_config.yaml
+++ b/_config.yaml
@@ -11,7 +11,7 @@ links:
   email: contact@Ivry-Lab.com
   orcid: 0000-0001-8713-9213
   google-scholar: https://scholar.google.com/citations?user=nicnuy4AAAAJ&hl=en
-  github: https://github.com/Ivry-Lab
+  github: https://github.com/Ivry-Lab/
   twitter: Ivry-Lab
   youtube: Ivry-Lab
 
