--- a/_config.yaml
+++ b/_config.yaml
@@ -8,12 +8,12 @@ proofer: false
 
 # site social media and other links
 links:
-  email: contact@Ivry-Lab.com
-  orcid: 0000-0001-8713-9213
+  email: ivry@berkeley.edu
+  orcid: 0000-0003-4728-5130
   google-scholar: https://scholar.google.com/citations?user=nicnuy4AAAAJ&hl=en
   github: Ivry-Lab
   twitter: Ivry-Lab
-  youtube: Ivry-Lab
+  youtube: @ivrylab4632
 
 ### jekyll settings
 
