fix youtube link

--- a/_config.yaml
+++ b/_config.yaml
@@ -13,7 +13,7 @@ links:
   google-scholar: https://scholar.google.com/citations?user=nicnuy4AAAAJ&hl=en
   github: Ivry-Lab
   twitter: Ivry-Lab
-  youtube: @ivrylab4632
+  youtube: /@ivrylab4632
 
 ### jekyll settings
 
