Add link description for site

--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
 title: Cognition and Action Lab
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: Website for the CognAc lab led by Prof. Ivry at the University of California, Berkeley.
 header: images/cognac_website_photo.jpg
 footer: images/cognac_website_photo.jpg
 proofer: false
