fix video clip thumbnail to be image only

--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -8,7 +8,7 @@
   description: Video interview with the Prestos Lab discussing skilled movements
   link: https://www.youtube.com/watch?v=SkA7tu0KaTk
   group: featured
-  image: https://www.youtube.com/watch?v=SkA7tu0KaTk/maxresdefault.jpg
+  image: https://img.youtube.com/vi/SkA7tu0KaTk/maxresdefault.jpg
 
 - title: Lab Newsletter
   description: Stay updated with the latest news from our lab.
