--- a/_config.yaml
+++ b/_config.yaml
@@ -10,7 +10,7 @@ proofer: false
 links:
   email: ivry@berkeley.edu
   orcid: 0000-0003-4728-5130
-  google-scholar: https://scholar.google.com/citations?user=nicnuy4AAAAJ&hl=en
+  google-scholar: nicnuy4AAAAJ
   github: Ivry-Lab
   twitter: Ivry-Lab
   youtube: /@ivrylab4632
